--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conversâo</title>
+    <title>Conversão de Moeda</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsivo.css">
     <link rel="shortcut icon" href="img/euro.png" type="image/x-icon">
 </head>
 <body>
